Lecture 7 slides and code

--- a/Lecture Notes/Lecture_07/Lecture_07.html
+++ b/Lecture Notes/Lecture_07/Lecture_07.html
@@ -79,6 +79,8 @@
             font-size: 1.25rem;
         }
 
+        Math
+
         table {
             font-size: 1.25rem;
             color: #333;
